# docs/swagger.json
@@ -9,6 +9,44 @@
     "host": "localhost:8000",
     "basePath": "/api",
     "paths": {
+        "/auth/get_id": {
+            "get": {
+                "description": "Извлекает user_id из контекста запроса, который был добавлен при проверке токена.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Получение user_id из access токена",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003caccess_token\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Возвращает user_id",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/logout": {
             "post": {
                 "description": "Деактивирует текущий токен (лог-аут) с помощью токена из заголовка Authorization.",
@@ -114,35 +152,6 @@
                 }
             }
         },
-        "/auth/user-id": {
-            "get": {
-                "description": "Извлекает user_id из контекста запроса, который был добавлен при проверке токена.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Получение user_id из access токена",
-                "responses": {
-                    "200": {
-                        "description": "Возвращает user_id",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Ошибка сервера",
-                        "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/auth/{user_id}": {
             "post": {
                 "description": "Генерирует пару токенов (access и refresh) по ID пользователя",
@@ -162,8 +171,7 @@
                         "description": "ID пользователя",
                         "name": "user_id",
                         "in": "path",
-                        "required": true,
-                        "format": "uuid"
+                        "required": true
                     }
                 ],
                 "responses": {
